qa-k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-shared-ingress
  namespace: qa-backend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: qa-backend-alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: test-api.talansm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-test
                port:
                  number: 80
    - host: api.talansm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-nlb-svc
                port:
                  number: 80
